[package]
name = "concurrency"
version = "0.1.0"
authors = ["Hey <author@example.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
oneshot = "0.1.8"
rand = "0.8.5"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "time",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
